--- a/package.json
+++ b/package.json
@@ -1,41 +1,73 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "vite_react_once_ui_core",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "React + Vite project with Once UI CLI support",
   "type": "module",
+  "bin": {
+    "once-ui-kit": "./bin/cli.js"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node bin/cli.js"
   },
   "dependencies": {
-    "@floating-ui/react-dom": "^2.1.1",
-    "classnames": "^2.5.1",
-    "compressorjs": "^1.2.1",
-    "next": "15.2.3",
-    "postcss": "^8.4.39",
-    "postcss-preset-env": "^9.5.15",
-    "prismjs": "^1.29.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.2.1",
-    "sass": "^1.77.6",
-    "sharp": "^0.33.4"
+    "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@types/papaparse": "^5.3.15",
+    "axios": "^1.6.2",
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "cmdk": "^1.0.0",
+    "commander": "^11.1.0",
+    "date-fns": "^3.6.0",
+    "figlet": "^1.7.0",
+    "fs-extra": "^11.1.1",
+    "gradient-string": "^2.0.2",
+    "inquirer": "^9.2.12",
+    "once-ui-cli": "^3.0.5",
+    "ora": "^7.0.1",
+    "papaparse": "^5.5.2",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7",
+    "uuid": "^11.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@csstools/postcss-global-data": "^2.1.1",
-    "@types/node": "20.17.23",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "postcss-custom-media": "^10.0.7",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "typescript": "5.8.2"
+    "@eslint/js": "^9.9.0",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "lovable-tagger": "^1.1.7",
+    "postcss": "^8.4.47",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
   },
-  "overrides": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
-  }
+  "keywords": [
+    "ui",
+    "components",
+    "cli",
+    "once-ui",
+    "vite",
+    "react",
+    "typescript",
+    "react-query",
+    "zod"
+  ],
+  "author": "SuhaibKing",
+  "license": "MIT"
 }
